# NewProject

./: .gitignore  1_calibration_1.1_labels.json  CMakeLists.txt  OSDaR23readme.md  README2.0.md  README_v2.0_使用说明.md  axis_projection_check.py  batch_visual.py  calibration.txt  check_lines.py  config.yaml  modify.md  osdar23_implementation_plan.md  run_pipeline.py  sam_2d.md  todo.md  visual_result.py
configs/: base.yaml  default.yaml  kitti.yaml  osdar23.yaml
cpp/: bev_builder.cpp  bev_initializer.cpp  bev_matcher.cpp  calibrator.cpp  edge_calibrator.cpp  io_utils.cpp  lidar_extractor.cpp  main.cpp  optimizer.cpp  optimizer_data_loader.cpp  optimizer_scoring.cpp  optimizer_semantic_scoring.cpp  rail_bev_extractor.cpp  vertical_structure_extractor.cpp
cpp/include/: bev_builder.h  bev_matcher.h  common.h  edge_calibrator.h  optimizer_cost_function.h  optimizer_data_loader.h  optimizer_image_utils.h  optimizer_scoring.h  optimizer_semantic_scoring.h  rail_bev_extractor.h  vertical_structure_extractor.h
dataset/: 0000000000_points.txt
docs/: analysis_report.md  architecture.md  todos.md
experiments/: README.md  check_bev_alignment.py  check_features.py  check_refine_window.py  check_semantic_alignment.py  evaluate_mask_alignment.py  line_constraint_ab_test.py
include/: common.h  edge_calibrator.h  math_utils.h  optimizer_cost_function.h  optimizer_data_loader.h  optimizer_image_utils.h  optimizer_scoring.h
pipeline/: _init_.py  context.py  dataset_resolver.py  feature_plugin_registry.py  observability.py  optimizer_env_adapter.py  refinement_state.py  runner.py
pipeline/datasets/: __init__.py  base.py  kitti.py  osdar23.py  resolver.py
pipeline/optimizer/: constraint_adapter.py  env_builder.py
pipeline/sam/: mask_alignment_plugin.py  plugin_registry.py  subprocess_plugin.py
pipeline/stages/: __init__.py  bev_stage.py  calib_stage.py  lidar_stage.py  (+4 more)
python/: __init__.py  run_sam.py  sam_extractor.py
src/: edge_calibrator.cpp  main.cpp
tests/: test_cli_semantics_and_plugin_registry.py  test_config_loading.py  test_dataset_resolver_osdar.py  test_datasets_adapter.py  test_frame_list_osdar_all_mode.py  test_lidar_stage_osdar_smoke.py  test_mask_alignment_plugin.py  test_osdar_calib_parse.py  test_smoke_single_frame.py  test_visual_result_calib_auto.py
tools/: bev_export_image_bin.py  export_semantic_probs_bin.py  pack_lidar_bev_npz.py  run_sam.py  sam_extractor.py  score_breakdown_io.py  semantic_to_bev.py  visualize.py  visualize_diag.py
(+10 files in other folders)
